--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+#Contact Me
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+###Usage###
+Rails app to create a Contact Form that sends email asynchronously using Sidekiq.
+Tested with gem letter_opener.
+
+Improvements: BDD testing using email_sync.
